-notifications fixed, sessions fixed